# facade

./: .gitpod.yml  Cargo.toml  LICENSE  README.md
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
examples/: minimal.rs
src/: lib.rs  main.rs  proxy.rs  types.rs
tests/: graphql_schema_test.rs  simple_test.rs
tests/common/: mod.rs  queries.graphql  schema.graphql
