[package]
name = "facade"
version = "0.1.0"
authors = ["Christian Kjaer Laustsen <ckl@codetalk.io>"]
edition = "2018"

[[bin]]
name = "facade"
src = "src/main.rs"

[lib]
name = "facade"
src = "src/lib.rs"

[profile.dev]
opt-level = 0
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
hyper = { version = "0.14.5", features = ["full"] }
hyper-rustls = { version = "0.22.1" }
routerify = { version = "2.2.0" }
anyhow = { version = "1.0.40" }
log = { version = "0.4.14" }
fern = { version = "0.6.0" }
chrono = { version = "0.4.19" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64" }

[dev-dependencies]
wiremock = "0.5"
async-graphql = "2.9.9"
graphql_client = { version = "0.9.0" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
lazy_static = { version = "1.4.0" }
once_cell = { version = "1.8.0" }
