[package]
name = "facade"
version = "0.1.0"
authors = ["Christian Kjaer Laustsen <ckl@codetalk.io>"]
edition = "2021"

[[bin]]
name = "facade"
src = "src/main.rs"

[lib]
name = "facade"
src = "src/lib.rs"

[profile.dev]
opt-level = 0
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
# Performs "fat" LTO which attempts to perform optimizations across all crates within the dependency graph.
lto = "fat"

[dependencies]
# Async.
tokio = { version = "1.19.2", features = ["full"] }
# HTTP and Routing.
hyper = { version = "0.14.19", features = ["full"] }
hyper-rustls = { version = "0.23.0" }
routerify = { version = "3.0.0" }
# Error handling.
anyhow = { version = "1.0.58" }
# Logging.
log = { version = "0.4.17" }
fern = { version = "0.6.1" }
chrono = { version = "0.4.19" }

# Handling JSON.
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }

[dev-dependencies]
# Mock HTTP clients.
wiremock = "0.5.13"
# GraphQL server and client used for testing.
async-graphql = "4.0.2"
graphql_client = { version = "0.10.0" }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
# Easily set up consts initalized at runtime.
lazy_static = { version = "1.4.0" }
once_cell = { version = "1.12.0" }
